src/test/deca/syntax/invalid/class/visibility_repete_champ.deca
/*
	Description: deux fois visibility

	Resultat syntaxiquement invalid

	Date: 20/01/2020

*/



class a extends b{
	

	protected protected int x;
}
